fixed button alignment

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -26,6 +26,7 @@ input[type='submit'] {
   white-space: nowrap;
 
   &.button-wide {
+    display: inline-block;
     width: 100%;
   }
 
